--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - pip install -r requirements.txt
 script:
   - cd decide
+  - cp travis_local_settings.py local_settings.py
   - ./manage.py test
 branches:
   only:
